{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 95,
  "lineage": "59edbcf7-739b-5355-b524-21693c7fc1ea",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210401",
                    "size": 20,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/zones/us-central1-b/disks/client"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "This is a ldap client",
            "enable_display": false,
            "id": "projects/splendid-sunset-291720/zones/us-central1-b/instances/client",
            "instance_id": "2744878069810111544",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-1-2304",
            "metadata_fingerprint": "gtoC6HcQIb4=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo yum -y install openldap-clients nss-pam-ldapd authconfig\nsudo authconfig --enableldap \\\n    --enableldapauth \\\n    --ldapserver=10.5.1.2 \\\n    --ldapbasedn=\"dc=devopsldab,dc=com\" \\\n    --enablemkhomedir \\\n    --update\n\ngetent passwd\n\nsudo systemctl restart  nslcd\n\nsudo sed -i \"s:PasswordAuthentication no:PasswordAuthentication yes:\" /etc/ssh/sshd_config\nsudo systemctl restart sshd",
            "name": "client",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.223.250.14",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/global/networks/ldap-network",
                "network_ip": "10.5.1.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/regions/us-central1/subnetworks/ldap-subnetwork",
                "subnetwork_project": "splendid-sunset-291720"
              }
            ],
            "project": "splendid-sunset-291720",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/zones/us-central1-b/instances/client",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "client"
            ],
            "tags_fingerprint": "Lil4YJpUN-c=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "module.instances.google_compute_instance.server",
            "module.networks.google_compute_network.vpc_network",
            "module.networks.google_compute_subnetwork.vpc_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210401",
                    "size": 20,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/zones/us-central1-b/disks/server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "This is a ldap server",
            "enable_display": false,
            "id": "projects/splendid-sunset-291720/zones/us-central1-b/instances/server",
            "instance_id": "5120662637164274726",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-1-2304",
            "metadata_fingerprint": "O1YqqS_uCGc=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo yum install -y openldap openldap-servers openldap-clients git\nsudo systemctl start slapd\nsudo systemctl enable slapd\nsudo systemctl status slapd\nsudo firewall-cmd --add-service ldap\n\ngit clone https://github.com/andreyess/ldap-config.git\ncd ldap-config\n\nexport PASSWORD=$(slappasswd -h {SSHA} -s ldppassword)\n\nsed -i \"s:PASSWORD:${PASSWORD}:\" ldaprootpasswd.ldif\n\nsudo ldapadd -Y EXTERNAL -H ldapi:/// -f ldaprootpasswd.ldif\ [...]
            "name": "server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.26.66",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/global/networks/ldap-network",
                "network_ip": "10.5.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/regions/us-central1/subnetworks/ldap-subnetwork",
                "subnetwork_project": "splendid-sunset-291720"
              }
            ],
            "project": "splendid-sunset-291720",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/zones/us-central1-b/instances/server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "server"
            ],
            "tags_fingerprint": "IX_iEHxGkOc=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "module.networks.google_compute_network.vpc_network",
            "module.networks.google_compute_subnetwork.vpc_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-02T06:23:07.989-07:00",
            "deny": [],
            "description": "This firewall configuration is used for http-connections from external http-lb to nginx-server",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/splendid-sunset-291720/global/firewalls/server-internal-firewall",
            "log_config": [],
            "name": "server-internal-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/global/networks/ldap-network",
            "priority": 1000,
            "project": "splendid-sunset-291720",
            "self_link": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/global/firewalls/server-internal-firewall",
            "source_ranges": [
              "10.5.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "client",
              "server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networks.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "server_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-02T06:23:07.988-07:00",
            "deny": [],
            "description": "This firewall configuration is used for http-connections from external http-lb to nginx-server",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/splendid-sunset-291720/global/firewalls/server-firewall",
            "log_config": [],
            "name": "server-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/global/networks/ldap-network",
            "priority": 1000,
            "project": "splendid-sunset-291720",
            "self_link": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/global/firewalls/server-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "client",
              "server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networks.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "This is the main network of our project",
            "id": "projects/splendid-sunset-291720/global/networks/ldap-network",
            "mtu": 0,
            "name": "ldap-network",
            "project": "splendid-sunset-291720",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/global/networks/ldap-network"
          }
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-04-02T06:23:08.156-07:00",
            "description": "This is subnetwork of our project",
            "gateway_address": "10.5.1.1",
            "id": "projects/splendid-sunset-291720/regions/us-central1/subnetworks/ldap-subnetwork",
            "ip_cidr_range": "10.5.1.0/24",
            "name": "ldap-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/global/networks/ldap-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "splendid-sunset-291720",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/splendid-sunset-291720/regions/us-central1/subnetworks/ldap-subnetwork"
          },
          "dependencies": [
            "module.networks.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}